Update CSS files

--- a/Module-02-The DOM/08 Debugging the DOM/index.html
+++ b/Module-02-The DOM/08 Debugging the DOM/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Tracker</title>
     <!-- <link rel="stylesheet" href="basic.css">  -->
-    <link rel="stylesheet" href="index.css"> 
+    <link rel="stylesheet" href="smartwatch.css"> 
 </head>
 <body>
     <div id="watch-container">
