--- a/Module-01-Syntax/01 Script tag, async, and defer/index.html
+++ b/Module-01-Syntax/01 Script tag, async, and defer/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Script Race Challenge</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Script Loading Race</h1>
