--- a/Module-02-The DOM/01 Introduction to the DOM/index.html
+++ b/Module-02-The DOM/01 Introduction to the DOM/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Tracker</title>
-    <!-- <link rel="stylesheet" href="basic.css">  -->
+    <link rel="stylesheet" href="basic.css"> 
     <link rel="stylesheet" href="smartwatch.css"> 
 </head>
 <body>
