--- a/Module-05-Arrays/02 Movie Quote Generator/index.html
+++ b/Module-05-Arrays/02 Movie Quote Generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <script src="solution.js" defer></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <!-- /* Check the Console */ -->
