--- a/Module-05-Arrays/04 Box Office Bangers/index.html
+++ b/Module-05-Arrays/04 Box Office Bangers/index.html
@@ -3,9 +3,9 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <title>💵</title>
         <link rel="stylesheet" href="index.css">
+        <script src="index.js" defer></script>
     </head>
     <body>
         <h1>make it rain</h1>
-        <script src="index.js"></script>
     </body>
 </html>
