--- a/Module-05-Arrays/05 Sorting Gadgets/index.html
+++ b/Module-05-Arrays/05 Sorting Gadgets/index.html
@@ -3,7 +3,7 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <title>🦇</title>
         <link rel="stylesheet" href="index.css">
-        <script src="index.js"></script>
+        <script src="index.js" defer></script>
     </head>
     <body>
         <h1>I am The Batman!</h1>
