--- a/Module-05-Arrays/07 Asynchronous Data Display with Modules/index.html
+++ b/Module-05-Arrays/07 Asynchronous Data Display with Modules/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>X-Men Characters</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div id="content"></div>
-    <script src="index.js"></script>
 </body>
 </html>
