Move script to head

--- a/Module-06-Functions/03 Fries Feast/index.html
+++ b/Module-06-Functions/03 Fries Feast/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fries Feast Order</title>
     <link rel="stylesheet" href="index.css">
+    <script src="solution.js" defer></script>
 </head>
 <body>
     <h2>🍟 Fries Feast Order Form 🤡</h2>
@@ -16,7 +17,5 @@
     <input type="text" id="topping" placeholder="Enter your topping">
     <button id="submitOrder">Submit Order</button>
     <div id="orderSummary"></div>
-
-    <script src="index.js"></script>
 </body>
 </html>
