Move script to head tag

--- a/Module-06-Functions/04 The Secret Recipe Closure/index.html
+++ b/Module-06-Functions/04 The Secret Recipe Closure/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KFC Meal Prep Simulator</title>
     <link rel="stylesheet" href="index.css">
+    <script src="solution.js" defer></script>
 </head>
 <body>
     <h2>🐔 Meal Prep Simulator 🍗</h2>
@@ -19,7 +20,6 @@
     </form>
     <div id="message"></div>
 
-    <script src="index.js" defer></script>
     <!-- <script src="solution.js" defer></script> -->
 </body>
 </html>
